# pluginpool-argus-audit

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: argus-audit.md
scripts/: argus_cli.py
scripts/argus/: __init__.py  authz.py  cli.py  enrich.py  errors.py  findings.py  intel.py  ownership.py  paths.py  report.py
scripts/argus/scanners/: __init__.py  http_probe.py  secrets.py  static_python.py  supply_chain.py  tls_audit.py
tests/: conftest.py  test_authz.py  test_cli.py  test_findings_report.py  test_fixes.py  test_intel.py  test_ownership.py  test_review10_fixes.py  test_review11_fixes.py  test_review2_fixes.py  test_review3_fixes.py  test_review4_fixes.py  test_review5_fixes.py  test_review6_fixes.py  test_review7_fixes.py  test_review8_fixes.py  test_review9_fixes.py  test_scanners.py
